# cpp-cmake-starter

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: .keep
lib/: CMakeLists.txt  local_library.cpp  local_library.h
test/: test.cpp
